samples/_failures_safe/1761171342_b23816_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a6824a12.c: In function ‘main’:
./samples/SAFE/__tmp_a6824a12.c:140:59: error: expected ‘)’ at end of input
  140 |             if (strcmp(entries[i].level, entries[j].level)
      |                ~                                          ^
      |                                                           )
./samples/SAFE/__tmp_a6824a12.c:140:13: error: expected declaration or statement at end of input
  140 |             if (strcmp(entries[i].level, entries[j].level)
      |             ^~
./samples/SAFE/__tmp_a6824a12.c:140:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a6824a12.c:140:13: error: expected declaration or statement at end of input
